--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Our GOAL</h1>
+<h1>OUR GOALS</h1>
 
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12">
